<?xml version="1.0"?>
<package format="2">
  <name>lab04_example</name>
  <version>1.0.0</version>
  <description>The lab04_example package</description>

  <maintainer email="l.dennis@unsw.edu.au">Luke Dennis</maintainer>


  <license>BSD</license>


  <url type="website">https://github.com/UNSW-MTRN4230-T2-2021/lab04_demo</url>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
